--- a/usermanagement/db/usermanagement.properties
+++ b/usermanagement/db/usermanagement.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.5.0
-#Tue Oct 15 10:25:29 EEST 2019
+#Tue Oct 15 10:49:36 EEST 2019
 version=2.5.0
-modified=no
+modified=yes
 tx_timestamp=0
